--- a/drivers/gpu/mali400/r4p0/mali/Kconfig
+++ b/drivers/gpu/mali400/r4p0/mali/Kconfig
@@ -75,3 +75,10 @@ config MALI_PMU_PARALLEL_POWER_UP
 	  powering up domains one by one, with a slight delay in between. Powering on all power
 	  domains at the same time may cause peak currents higher than what some systems can handle.
 	  These systems must not enable this option.
+
+config GPU_CLOCK_CONTROL
+  bool "Enable GPU clock control and voltage interface"
+  depends on MALI400
+  default y
+  help
+    This enables a sysfs interface to control gpu clock and voltage.
