--- a/arch/arm/configs/m0_00_defconfig
+++ b/arch/arm/configs/m0_00_defconfig
@@ -34,12 +34,14 @@ CONFIG_HAVE_IRQ_WORK=y
 #
 # ArchiKernel settings
 #
+
+#
+# Target options
+#
 CONFIG_ARCHIKERNEL_TARGET_SYSTEM_AOSP=y
 # CONFIG_ARCHIKERNEL_TARGET_SYSTEM_SAMSUNG is not set
 # CONFIG_ARCHIKERNEL_TARGET_SYSTEM_UNKNOWN is not set
-CONFIG_ARCHIKERNEL_TARGET_SYSTEM_HAS_NO_SLICE_ENCODING=y
-CONFIG_ARCHIKERNEL_TARGET_SYSTEM_HAS_BROKEN_S5C73M3_FIRMWARE=y
-# CONFIG_ARCHIKERNEL_TARGET_SYSTEM_HAS_BROKEN_ZRAM is not set
+# CONFIG_ARCHIKERNEL_TARGET_ARCH_ARMV7VE is not set
 CONFIG_ARCHIKERNEL_TARGET_ARCH_ARMV7A=y
 # CONFIG_ARCHIKERNEL_TARGET_ARCH_UNKNOWN is not set
 # CONFIG_ARCHIKERNEL_TARGET_CPU_CORTEXA15 is not set
@@ -54,10 +56,37 @@ CONFIG_ARCHIKERNEL_TARGET_CPU_ABI_SOFTFP=y
 CONFIG_ARCHIKERNEL_TARGET_CPU_FPU_NEON=y
 # CONFIG_ARCHIKERNEL_TARGET_CPU_FPU_VFPV3 is not set
 # CONFIG_ARCHIKERNEL_TARGET_CPU_FPU_UNKNOWN is not set
+
+#
+# Core options
+#
+CONFIG_ARCHIKERNEL_SOUND_ENGINE_BOEFFLA=y
+# CONFIG_ARCHIKERNEL_SOUND_ENGINE_NONE is not set
 # CONFIG_ARCHIKERNEL_OPTI_OFAST is not set
 CONFIG_ARCHIKERNEL_OPTI_O3=y
 # CONFIG_ARCHIKERNEL_OPTI_O2 is not set
 # CONFIG_ARCHIKERNEL_OPTI_OS is not set
+
+#
+# Hacks / Workarounds
+#
+CONFIG_ARCHIKERNEL_TARGET_SYSTEM_HAS_NO_SLICE_ENCODING=y
+CONFIG_ARCHIKERNEL_TARGET_SYSTEM_HAS_BROKEN_S5C73M3_FIRMWARE=y
+# CONFIG_ARCHIKERNEL_TARGET_SYSTEM_HAS_BROKEN_ZRAM is not set
+
+#
+# Core features
+#
+CONFIG_ARCHIKERNEL_LED_SETTINGS=y
+CONFIG_ARCHIKERNEL_HAPTIC_CONTROL_AOSP=y
+CONFIG_ARCHIKERNEL_CPU_VOLTAGE_INTERFACE=y
+CONFIG_ARCHIKERNEL_CPU_OC_1600=y
+CONFIG_ARCHIKERNEL_GPU_CONTROL=y
+CONFIG_ARCHIKERNEL_TOUCH_LED_CONTROL=y
+
+#
+# Optimizations
+#
 CONFIG_ARCHIKERNEL_OPTI_DNDEBUG=y
 CONFIG_ARCHIKERNEL_OPTI_FSECTION_ANCHORS=y
 CONFIG_ARCHIKERNEL_OPTI_FUNSAFE_LOOP_OPTIMIZATIONS=y
@@ -71,11 +100,6 @@ CONFIG_ARCHIKERNEL_OPTI_FGCSE_LAS=y
 CONFIG_ARCHIKERNEL_OPTI_FWEB=y
 CONFIG_ARCHIKERNEL_OPTI_FTRACER=y
 CONFIG_ARCHIKERNEL_OPTI_FIPA_PTA=y
-CONFIG_ARCHIKERNEL_LED_SETTINGS=y
-CONFIG_ARCHIKERNEL_HAPTIC_CONTROL_AOSP=y
-CONFIG_ARCHIKERNEL_CPU_VOLTAGE_INTERFACE=y
-CONFIG_ARCHIKERNEL_CPU_OC_1600=y
-CONFIG_ARCHIKERNEL_GPU_CONTROL=y
 
 #
 # General setup
