--- a/arch/arm/configs/aosp_ak_defconfig
+++ b/arch/arm/configs/aosp_ak_defconfig
@@ -254,7 +254,9 @@ CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
 # CONFIG_IOSCHED_ROW is not set
 # CONFIG_IOSCHED_CFQ is not set
+# CONFIG_IOSCHED_FIOPS is not set
 CONFIG_DEFAULT_DEADLINE=y
+# CONFIG_DEFAULT_FIOPS is not set
 # CONFIG_DEFAULT_NOOP is not set
 CONFIG_DEFAULT_IOSCHED="deadline"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
