--- a/arch/arm/configs/aosp_ak_defconfig
+++ b/arch/arm/configs/aosp_ak_defconfig
@@ -2372,7 +2372,7 @@ CONFIG_ION_EXYNOS=y
 CONFIG_ION_EXYNOS_CONTIGHEAP_SIZE=71680
 # CONFIG_ION_EXYNOS_CONTIGHEAP_DEBUG is not set
 CONFIG_MALI400=y
-CONFIG_MALI_VER_R3P2=y
+CONFIG_MALI_VER_R4P0=y
 # CONFIG_MALI400_DEBUG is not set
 # CONFIG_MALI400_PROFILING is not set
 CONFIG_MALI_DVFS=y
@@ -2408,7 +2408,7 @@ CONFIG_FB_S5P=y
 CONFIG_FB_S5P_SPLASH_SCREEN=y
 # CONFIG_FB_S5P_LCD_INIT is not set
 # CONFIG_FB_S5P_DEBUG is not set
-CONFIG_FB_S5P_VSYNC_THREAD=y
+# CONFIG_FB_S5P_VSYNC_THREAD is not set
 # CONFIG_FB_S5P_TRACE_UNDERRUN is not set
 CONFIG_FB_S5P_DEFAULT_WINDOW=2
 CONFIG_FB_S5P_NR_BUFFERS=2
@@ -3111,7 +3111,7 @@ CONFIG_INPUT_YAS_MAGNETOMETER_POSITION=0
 # CONFIG_SENSORS_SSP_SHTC1 is not set
 # CONFIG_SENSORS_SSP_ATUC128L5HAR is not set
 # CONFIG_SENSORS_SSP_STM32F401 is not set
-# CONFIG_PM_DEVFREQ is not set
+CONFIG_PM_DEVFREQ=y
 # CONFIG_SAMSUNG_PHONE_SVNET is not set
 CONFIG_ACCESSORY=y
 # CONFIG_30PIN_CONN is not set
