Revert "remove gpu control from config"
This reverts commit 0552c720b0c8f0af0d9e7956033dad5760a628c4.

--- a/arch/arm/configs/aosp_ak_defconfig
+++ b/arch/arm/configs/aosp_ak_defconfig
@@ -83,6 +83,7 @@ CONFIG_ARCHIKERNEL_HAPTIC_CONTROL_AOSP=y
 CONFIG_ARCHIKERNEL_CPU_VOLTAGE_INTERFACE=y
 CONFIG_ARCHIKERNEL_CPU_OC_1600=y
 CONFIG_ARCHIKERNEL_CPU_OC_1600_DEFAULT=y
+CONFIG_ARCHIKERNEL_GPU_CONTROL=y
 CONFIG_ARCHIKERNEL_TOUCH_LED_CONTROL=y
 
 #
